# Climat-Medias

./: README.md  config_corrections.py  validation_email_adresses.ipynb
Code_cartes/: carte_presse.py  main.py  pyproject.toml  test_cartes.ipynb
Code_cartes/data/: ACPM_list_presse-quotidienne-regionale_20251110.csv  ACPM_list_presse_20251110.csv  carte_choropleth_simple.html  departements.csv  departements_avec_regions.csv  zones_diffusion.csv
Suivi_temps/: app_suivi_temps.py  concatenate_temps.ipynb
