[project]
name = "code-cartes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "branca>=0.4.0",
    "folium>=0.12.0",
    "geopandas>=1.0.1",
    "matplotlib>=3.4.0",
    "openpyxl>=3.0.0",
    "pandas>=1.3.0",
    "plotly>=6.4.0",
    "streamlit>=1.51.0",
]
